@@ -1,2 +1,2 @@
-Dave Griffiths <dave@pawfal.org>
+Dave Griffiths 
 James Tittle II : OSX port
