@@ -1,3 +1,5 @@
+Fluxus : (C) 2005 Dave Griffiths : dave at pawfal dot org : www.pawfal.org
+
 0.7
 
 overhauled the osc support (osc-msg) (osc) (osc-peek)
